# pico2-ea888.3-car-dashboard

./: .gitattributes  .gitignore  LICENSE  README.md
.claude/: instructions.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
firmware/: CLAUDE.md  Cargo.toml  rust-toolchain.toml  rustfmt.toml
firmware/.cargo/: config.toml
firmware/common/: Cargo.toml
firmware/common/src/: animations.rs  colors.rs  config.rs  lib.rs  profiling.rs  render.rs  sensor_state.rs  styles.rs  thresholds.rs
firmware/common/src/widgets/: cells.rs  mod.rs  popups.rs  primitives.rs
firmware/pico/: Cargo.toml
firmware/pico/src/: display.rs  main.rs  st7789.rs
firmware/pico/src/screens/: loading.rs  mod.rs  profiling.rs  welcome.rs
firmware/pico2/: Cargo.toml  build.rs
firmware/pico2/src/: animations.rs  button.rs  config.rs  cpu_cycles.rs  display.rs  lib.rs  log_buffer.rs  main.rs  memory.rs  pages.rs  popup.rs  render.rs  sensor_state.rs  st7789.rs  styles.rs  thresholds.rs
firmware/pico2/src/config/: layout.rs  mod.rs  sensors.rs
firmware/pico2/src/drivers/: display.rs  mod.rs  st7789.rs
firmware/pico2/src/peripherals/: encoder.rs  mod.rs
firmware/pico2/src/profiling/: cpu_cycles.rs  log_buffer.rs  memory.rs  mod.rs
firmware/pico2/src/screens/: boot.rs  loading.rs  logs.rs  mod.rs  profiling.rs  welcome.rs
firmware/pico2/src/state/: button.rs  input.rs  mod.rs  pages.rs  popup.rs  sensor_state.rs
firmware/pico2/src/tasks/: demo.rs  flush.rs  mod.rs
firmware/pico2/src/ui/: animations.rs  colors.rs  mod.rs  styles.rs
firmware/pico2/src/widgets/: cells.rs  header.rs  mod.rs  popups.rs  primitives.rs
firmware/pico2/src/widgets/cells/: afr.rs  battery.rs  boost.rs  mod.rs  temp.rs
firmware/simulator/: Cargo.toml  build.rs
firmware/simulator/src/: main.rs  popup.rs  profiling.rs  state.rs  timing.rs
firmware/simulator/src/screens/: debug.rs  loading.rs  mod.rs  welcome.rs
firmware/simulator/src/widgets/: cells.rs  header.rs  mod.rs  popups.rs  primitives.rs
firmware/src/: animations.rs  config.rs  main.rs  pages.rs  profiling.rs  render.rs  state.rs  styles.rs  thresholds.rs
firmware/src/screens/: debug.rs  loading.rs  mod.rs  welcome.rs
firmware/src/widgets/: cells.rs  header.rs  mod.rs  popups.rs  primitives.rs
hardware/: wiring-diagram.txt
