[package]
name = "pico2-ea888.3-car-dashboard-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.8.0"
profont = "0.7"
heapless = "0.9.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.dev]
opt-level = 2
debug = true

# Optimize dependencies even in dev builds
[profile.dev.package."*"]
opt-level = 3
