[workspace]
resolver = "2"
members = [
    "common",
    "simulator",
    "pico",
]

# Shared profile settings for all workspace members
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.dev]
opt-level = 2
debug = true

# Optimize dependencies even in dev builds
[profile.dev.package."*"]
opt-level = 3
