[package]
name = "dashboard-common"
version = "0.1.0"
edition = "2024"
description = "Shared types and constants for OBD-II dashboard"

[features]
default = []
# Use simple 2-pass shadow instead of 8-pass outline for better performance on embedded
simple-outline = []

[dependencies]
embedded-graphics = "0.8.1"
heapless = "0.9.2"
micromath = "2.1"
profont = "0.7"
