[package]
name = "dashboard-pico"
version = "0.1.0"
edition = "2024"
description = "OBD-II dashboard firmware for Raspberry Pi Pico 2 (RP2350)"

[[bin]]
name = "pico"
path = "src/main.rs"

[dependencies]
dashboard-common = { path = "../common" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = "0.5.0"
embassy-rp = { version = "0.9.0", features = [
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
    "defmt",
] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"

# Display driver
mipidsi = "0.8"
display-interface-spi = "0.5"
embedded-graphics = "0.8.1"
embedded-hal = "1.0"
embedded-hal-bus = "0.2"

# Math functions for no_std
libm = "0.2"
