[package]
name = "dashboard-pico"
version = "0.1.0"
edition = "2024"
description = "OBD-II dashboard firmware for Raspberry Pi Pico 2 (RP2350)"

[[bin]]
name = "pico"
path = "src/main.rs"

[features]
default = []
# Overclock RP2350 from 150 MHz to 300 MHz (2x) at default 1.1V
# Safe for most boards without additional cooling
overclock = []

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
dashboard-common = { path = "../common" }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-rp = { version = "0.9.0", features = ["binary-info", "critical-section-impl", "defmt", "rp235xa", "time-driver"] }
embassy-time = "0.5.0"
embedded-graphics = "0.8.1"
heapless = "0.9.2"
micromath = "2.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
