[package]
name = "dashboard-pico2"
version = "0.1.0"
edition = "2024"
description = "OBD-II dashboard firmware for Raspberry Pi Pico 2 (RP2350)"

# Library for testable modules (can run on host)
[lib]
name = "dashboard_pico2"
path = "src/lib.rs"

# Binary for embedded target (RP2350)
[[bin]]
name = "pico2"
path = "src/main.rs"

[features]
default = []
# Overclock profiles: cpu{MHz}-spi{MHz}-{voltage}
# All profiles use simple-outline by default for best FPS
cpu250-spi62-1v10 = []  # 250 MHz @ 1.10V - 62.5 MHz SPI (ST7789 datasheet max)
cpu280-spi70-1v30 = []  # 280 MHz @ 1.30V - 70 MHz SPI (280/4, beyond datasheet)
cpu300-spi75-1v30 = []  # 300 MHz @ 1.30V - 75 MHz SPI (300/4)
cpu320-spi80-1v40 = []  # 320 MHz @ 1.40V - 80 MHz SPI (320/4, extreme OC)
cpu340-spi85-1v40 = []  # 340 MHz @ 1.40V - 85 MHz SPI (340/4, extreme OC)
simple-outline = []

# === Cross-platform dependencies (work on host and ARM) ===
[dependencies]
embedded-graphics = "0.8.1"
heapless = "0.9.2"
micromath = "2.1.0"
profont = "0.7"

# === ARM-only dependencies (conditional on target) ===
[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-rp = { version = "0.9.0", features = ["binary-info", "critical-section-impl", "defmt", "rp235xa", "time-driver"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1"
